# PetroApp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PetroApp.postman_collection.json  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py
app/api/: routes.py
app/models/: transfer_event.py
app/schemas/: transfer_event.py
app/services/: transfer_service.py
app/store/: base.py  postgres.py
docs/plans/: 2026-02-24-station-transfers-design.md
scripts/: init-test-db.sh
tests/: conftest.py  test_schemas.py  test_transfers.py
