[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petro-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.133.0",
    "uvicorn[standard]==0.41.0",
    "sqlalchemy[asyncio]==2.0.47",
    "asyncpg==0.31.0",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
